# simulation_NEVOD

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  NEVOD.cc  NVD91.cc  README.md  main.cc  parallel.sh  run.mac  vis.mac
.devcontainer/: .dockerignore  devcontainer.json
config/: run_config.yaml  vis.mac
docker/: Dockerfile  docker-compose.yml
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  FileReader.hh  FileWriter.hh  NVDDetectorConstruction.hh  NVDEventAction.hh  NVDPrimaryGeneratorAction.hh  NVDRunAction.hh  NVDSteppingAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
include/action/: ActionInitialization.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
include/control/: Communicator.hh  EventData.hh  InputManager.hh
include/detector/: DetectorConstruction.hh
include/detector/sensetive/: Control.hh  DECOR.hh  QSM.hh  SCT.hh  Water.hh
source/: DetectorConstruction.cc  EventAction.cc  FileReader.cc  FileWriter.cc  PrimaryGeneratorAction.cc  SteppingAction.cc
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  FileReader.cc  FileWriter.cc  NVDDetectorConstruction.cc  NVDEventAction.cc  NVDPrimaryGeneratorAction.cc  NVDRunAction.cc  NVDSteppingAction.cc  PrimaryGeneratorAction.cc  SteppingAction.cc
src/action/: ActionInitialization.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
src/control/: Communicator.cc  EventData.cc  InputManager.cc
src/detector/: DetectorConstruction.cc
src/detector/sensetive/: Control.cc  DECOR.cc  QSM.cc  SCT.cc  Water.cc
